# pfennig-server

./: .travis.yml  LICENSE  README.md  pfennig-server.cabal  restclient-testing  stack.yaml
assets/: .gitignore
src/: Main.hs  Migrations.hs  Schema.hs
src/Pfennig/: App.hs  Auth.hs  AuthServant.hs  Authentication.hs  Handlers.hs  Layout.hs  Main.hs  Migrations.hs  Models.hs  Modules.hs  NetworkHelper.hs  Queries.hs  Schema.hs  ScottyUtil.hs  View.hs
src/Pfennig/Events/: Recorder.hs
tests/: AuthSpec.hs  NetworkHelperSpec.hs
