name:                pfennig-server
version:             0.1.0.0
license-file:        LICENSE
author:              Samuel Schuhmacher
maintainer:          forgetaboutit@muhbaasu.de
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable pfennig-server
  main-is:             Main.hs
  ghc-options:         -W -Wall
  -- other-modules:       
  -- other-extensions:    
  build-depends:       aeson >=0.8
                     , base >=4.7 && <4.8
                     , bytestring >=0.10
                     , datetime >=0.2.1
                     , hasql >=0.7
                     , hasql-backend >=0.4
                     , hasql-postgres >=0.10
                     , http-types >=0.8
                     , lens >=4.4
                     , mtl >= 2.2
                     , safe >=0.3
                     , scotty >=0.9
                     , SHA >=1.6
                     , text >=1.2
                     , transformers >=0.4

  hs-source-dirs:      src/Pfennig/
  default-language:    Haskell2010
  default-extensions:  GeneralizedNewtypeDeriving
                     , OverloadedStrings
