name:                pfennig-server
version:             0.1.0.0
license-file:        LICENSE
author:              Samuel Schuhmacher
maintainer:          forgetaboutit@muhbaasu.de
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable pfennig-server
  main-is:             Main.hs
  ghc-options:         -W -Wall -threaded
  -- other-modules:
  -- other-extensions:
  build-depends:       aeson >=0.8
                     , base >=4.7 && <5
                     , bytestring >=0.10
                     , clay
                     , cookie ==0.4.*
                     , errors >=2.0
                     , hasql >=0.7
                     , hasql-backend >=0.4
                     , hasql-postgres >=0.10
                     , hspec
                     , http-media >=0.1
                     , http-types >=0.8
                     , jwt ==0.6.*
                     , lens >=4.4
                     , lucid >=2.9
                     , mtl >= 2.2
                     , safe >=0.3
                     , scientific >=0.3.3
                     , scotty >=0.9
                     , SHA >=1.6
                     , text >=1.2
                     , time >=1.5
                     , transformers >=0.4
                     , wai-middleware-static >= 0.7
--  exposed-modules:     NetworkHelper
  hs-source-dirs:      src/Pfennig/
  default-language:    Haskell2010
  default-extensions:  GeneralizedNewtypeDeriving
                     , OverloadedStrings

Test-Suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       tests, src/Pfennig
  ghc-options:          -W -Wall
  main-Is:              Spec.hs
  default-extensions:   GeneralizedNewtypeDeriving
                      , OverloadedStrings
  build-depends:        base
                      , bytestring
                      , cookie
                      , hspec
                      , http-types
                      , http-media
                      , jwt
                      , text
                      , time
                      , scotty
